--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,26 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+html {
+	height: 100%;
+}
+
+body {
+	height: 100%;
+}
+
+#root {
+	height: 100%;
+	display: grid;
+	grid-template-rows: 60px 58px auto 82px ;
+}
+
+footer {
+	font-size: 14px;
+	grid-row: 4 / 5;
+}
+
+footer :first-child {
+	margin-bottom: 4px;
+}
